Average deviation calculation
Closes #9